# Franka_Panda_SAC_using_ROS_and_Gazebo

./: .gitignore  ENHANCED_LNN_RL_README.md  LNN_PHYSICS_ANALYSIS.md  MBRL_EXPERIMENT_README.md  PHASE1_README.md  README.md  RL_TRAINING_GUIDE.md  SAC_PICK_PLACE_INTEGRATION.md  TRAINING_ROADMAP.md  analyze_data.py  collect_training_data.py  comprehensive_reward_function.py  constraint_aware_controller.py  debug_environment.py  debug_mbrl_experiment.py  enhanced_lnn_manipulator.py  integrated_lnn_rl_framework.py  interactive_joint_control.py  lagrangian_constraint_integration.py  launch_enhanced_training.sh  launch_fixed_environment.sh  launch_phase1_training.sh  monitor_joint_states.py  rl_constraint_environment.py  rl_training_framework.py  run_mbrl_experiment.sh  run_training.sh  setup_environment.sh  setup_environment_minimal.sh  setup_environment_simple.sh  single_episode_mbrl_experiment.py  start_rl_training.py  test_collision_detection.py  test_lnn_validation.py  test_phase1.py  test_phase1_simple.py  test_reward_system.py  test_ros_integration.py  test_success_criteria.py  train_sac_enhanced.py
env/: gazebo_env_enhanced.py  (+2 more)
simple_manipulator_ws/src/pick_and_place/: CMakeLists.txt  package.xml
simple_manipulator_ws/src/pick_and_place/config/: robot_details.yaml
simple_manipulator_ws/src/pick_and_place/launch/: panda_world.launch  panda_world_fixed.launch  sac_training.launch
simple_manipulator_ws/src/pick_and_place/msg/: DetectedObject.msg
simple_manipulator_ws/src/pick_and_place/scripts/: deep_lagrangian_experiments.py  lagrangian_utils.py  logging_config.py  perception_module.py  pick_place_sac_env.py  residual_controller.py  ros_controller.py  run_lagrangian_experiments.sh  sac_pick_place_trainer.py  test_learning_pick_place.py
simple_manipulator_ws/src/pick_and_place/worlds/: pick_and_place.world
simple_manipulator_ws/src/simple_manipulator/: CMakeLists.txt
simple_manipulator_ws/src/simple_manipulator/config/: controllers.yaml
simple_manipulator_ws/src/simple_manipulator/launch/: training_env.launch
simple_manipulator_ws/src/simple_manipulator/models/: coke_can.sdf
(+21 files in other folders)
